--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "drupal-hashed-password-rs"
+name = "drupal-password-hasher"
 version = "0.1.0"
 authors = ["Marc Addeo <marcaddeo@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+rand = "0.5.5"
+sha2 = "0.8.0"
